Move docs to gen folder
