# gen/v2/docs/swagger.json
@@ -1,22 +1,11 @@
-// Package v2 GENERATED BY THE COMMAND ABOVE; DO NOT EDIT
-// This file was generated by swaggo/swag
-package v2
-
-import (
-	"bytes"
-	"encoding/json"
-	"strings"
-	"text/template"
-
-	"github.com/swaggo/swag"
-)
-
-var doc = `{
-    "schemes": {{ marshal .Schemes }},
+{
+    "schemes": [
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "This is the former v2 REST API for 7TV (deprecated)",
+        "title": "7TV REST API",
         "termsOfService": "TODO",
         "contact": {
             "name": "7TV Developers",
@@ -27,10 +16,10 @@ var doc = `{
             "name": "Apache 2.0 + Commons Clause",
             "url": "https://github.com/SevenTV/REST/blob/dev/LICENSE.md"
         },
-        "version": "{{.Version}}"
+        "version": "2.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "api.7tv.app",
+    "basePath": "/v2",
     "paths": {
         "/cosmetics": {
             "get": {
@@ -55,6 +44,37 @@ var doc = `{
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.CosmeticsMap"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{user}": {
+            "get": {
+                "description": "Finds a user by its ID, Username or Twitch ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID, Username or Twitch ID",
+                        "name": "user",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.User"
+                            }
                         }
                     }
                 }
@@ -318,58 +338,4 @@ var doc = `{
             }
         }
     }
-}`
-
-type swaggerInfo struct {
-	Version     string
-	Host        string
-	BasePath    string
-	Schemes     []string
-	Title       string
-	Description string
-}
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = swaggerInfo{
-	Version:     "2.0",
-	Host:        "api.7tv.app",
-	BasePath:    "/v2",
-	Schemes:     []string{"https"},
-	Title:       "7TV REST API",
-	Description: "This is the former v2 REST API for 7TV (deprecated)",
-}
-
-type s struct{}
-
-func (s *s) ReadDoc() string {
-	sInfo := SwaggerInfo
-	sInfo.Description = strings.Replace(sInfo.Description, "\n", "\\n", -1)
-
-	t, err := template.New("swagger_info").Funcs(template.FuncMap{
-		"marshal": func(v interface{}) string {
-			a, _ := json.Marshal(v)
-			return string(a)
-		},
-		"escape": func(v interface{}) string {
-			// escape tabs
-			str := strings.Replace(v.(string), "\t", "\\t", -1)
-			// replace " with \", and if that results in \\", replace that with \\\"
-			str = strings.Replace(str, "\"", "\\\"", -1)
-			return strings.Replace(str, "\\\\\"", "\\\\\\\"", -1)
-		},
-	}).Parse(doc)
-	if err != nil {
-		return doc
-	}
-
-	var tpl bytes.Buffer
-	if err := t.Execute(&tpl, sInfo); err != nil {
-		return doc
-	}
-
-	return tpl.String()
-}
-
-func init() {
-	swag.Register("swagger", &s{})
 }
